Fix overflow issue

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -8,10 +8,6 @@
   --hover-accent-orange: #bd7e00;
 }
 
-#root {
-  overflow-x: hidden;
-}
-
 * {
   padding: 0;
   margin: 0;
